--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "notistack": "^1.0.10",
